fix: update visibility and max-width for search section and auth link

--- a/public/assets/styles.autoprefixed.css
+++ b/public/assets/styles.autoprefixed.css
@@ -198,7 +198,8 @@ input:-webkit-autofill {
 }
 
 #search-section {
-  max-width: 63vw;
+  visibility: hidden;
+  max-width: 70vw;
 }
 
 #toggle-signup-password,
@@ -367,6 +368,10 @@ html {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
 
+}
+
+#auth-link {
+  visibility: hidden;
 }
 
 #search-button {
